# camera-adaboost

./: CMakeLists.txt  README.md  runadaboost.cpp
adaboost/: AdaBooster.cpp  AdaBooster.h  CMakeLists.txt  FeatureVector.cpp  FeatureVector.h  TrainingData.cpp  TrainingData.h  WeakClassifier.cpp  WeakClassifier.h  adaboost.cpp  box.cpp  box.h  circles.cpp  circles.h  plotstuff  sorting.cpp  sorting.h  stuff.cpp  test_adaboost.cpp  test_circles.cpp
classifiedviewer/: CMakeLists.txt  classifiedviewer.cpp  classifiedviewer.h  classifiedviewer.pro  classifiedviewer.ui  main.cpp
config/: classifiedviewer.cfg  runadaboost.cfg
features/: CMakeLists.txt  HaarFeature.cpp  HaarFeature.h  ImageFeatures.cpp  ImageFeatures.h  ImageTransforms.cpp  ImageTransforms.h  TrainingParser.cpp  TrainingParser.h
tester/: CMakeLists.txt  Grid.cpp  Grid.h  ImageTester.cpp  ImageTester.h
trainer/: CMakeLists.txt  Makefile  clicklabel.cpp  clicklabel.h  main.cpp  testMain.cpp  trainergui.cpp  trainergui.h  trainergui.pro  trainergui.ui
utils/: CMakeLists.txt  utils.cpp  utils.h
